--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "libsodium"]
 	path = libsodium
-	url = git@github.com:bes-org/libsodium.git
+	url = https://github.com/bes-org/libsodium.git
